--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <section id="telefone">
             
-
+            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
           
 
         </section>
@@ -25,7 +25,15 @@
 
 
 
-        <section id="redes sociais">
+        <section id="redes-sociais">
+
+            <a href=#" target='tela'> <img src="pacote-d013/imagens/logo-home.jpg" alt="">          </a><br>
+            <a href=#" target='tela'> <img src="pacote-d013/imagens/logo-facebook.jpg" alt="">          </a><br>
+            <a href=#" target='tela'> <img src="pacote-d013/imagens/logo-twitter.jpg" alt="">          </a><br>
+
+            <a href=#" target='tela'><img src="pacote-d013/imagens/logo-youtube.jpg" alt="">           </a><br>
+            <a href=#" target='tela'> <img src="pacote-d013/imagens/logo-instagram.jpg" alt="">          </a><br>
+            <a href=#" target='tela'>  <img src="pacote-d013/imagens/logo-github.jpg" alt="">         </a>
 
 
         </section>
